--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,71 +12,71 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name, "Player Name" %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :address %>
     <%= f.text_field :address %>
   </div>
-  <div class="field">
-    <%= f.label :suburb %><br />
+  <div class="field medium-field">
+    <%= f.label :suburb %>
     <%= f.text_field :suburb %>
   </div>
-  <div class="field">
-    <%= f.label :pcode %><br />
+  <div class="field short-field">
+    <%= f.label :pcode %>
     <%= f.text_field :pcode %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :dob %><br />
+    <%= f.label :dob, "Date of Birth" %>
     <%= f.text_field :dob %>
   </div>
   <div class="field">
-    <%= f.label :emergencyName %><br />
+    <%= f.label :emergencyName, "Emergency Contact Name" %>
     <%= f.text_field :emergencyName %>
   </div>
   <div class="field">
-    <%= f.label :emergencyNumber %><br />
+    <%= f.label :emergencyNumber, "Emergency Contact Phone" %>
     <%= f.text_field :emergencyNumber %>
   </div>
   <div class="field">
-    <%= f.label :mobile %><br />
+    <%= f.label :mobile %>
     <%= f.text_field :mobile %>
   </div>
   <div class="field">
-    <%= f.label :height %><br />
+    <%= f.label :height, "Height (cms)" %>
     <%= f.text_field :height %>
   </div>
   <div class="field">
-    <%= f.label :weight %><br />
+    <%= f.label :weight, "Weight (kgs)" %>
     <%= f.text_field :weight %>
   </div>
   <div class="field">
-    <%= f.label :yearsSenior %><br />
+    <%= f.label :yearsSenior, "Years playing seniors" %>
     <%= f.text_field :yearsSenior %>
   </div>
   <div class="field">
-    <%= f.label :yearsJunior %><br />
+    <%= f.label :yearsJunior, "Years playing juniors" %>
     <%= f.text_field :yearsJunior %>
   </div>
   <div class="field">
-    <%= f.label :position1 %><br />
+    <%= f.label :position1, "Position Preference #1" %>
     <%= f.text_field :position1 %>
   </div>
   <div class="field">
-    <%= f.label :position2 %><br />
+    <%= f.label :position2, "Position Preference #2" %>
     <%= f.text_field :position2 %>
   </div>
   <div class="field">
-    <%= f.label :goals %><br />
+    <%= f.label :goals, "Goals for the season (personal and team)" %>
     <%= f.text_area :goals %>
   </div>
   <div class="field">
-    <%= f.label :comments %><br />
+    <%= f.label :comments, "Any other comments" %>
     <%= f.text_area :comments %>
   </div>
   <div class="actions">
