--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -20,6 +20,10 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
+h1 {
+  margin-bottom: 30px;
+}
+
 #notice {
   color: green;
 }
@@ -55,20 +59,78 @@ div.field, div.actions {
   list-style: square;
 }
 
-.field {
+.clearBoth {
   clear: both;
 }
 
 .field label {
   display: inline-block;
   float: left;
-  width: 180px;
+  width: 150px;
+  font-size: 11px;
+  padding-top: 5px;
+  color: #888;
 }
 
+.field input {
+  border: 1px solid #e2e2e2;
+  padding: 4px 6px;
+  font-size: 16px;
+  width: 430px;
+}
+
+.second-medium-field,
+.medium-field  {
+  float: left;
+}
+
+.medium-field input,
+.second-medium-field input {
+  width: 153px;
+}
+
+.second-medium-field label {
+  width: 100px;
+  padding-left: 10px;
+}
 
 textarea {
-  width: 400px;
+  border: 1px solid #e2e2e2;
+  width: 430px;
   height: 100px;
+  font: 13px arial;
+  padding: 5px;
 }
 
+th {
+  text-align: left;
+}
+
+table td {
+  border-bottom: 1px solid #e2e2e2;
+  padding: 4px 0 12px 5px;
+}
+
+table th {
+  border-bottom: 2px solid #cccccc;
+  padding: 0 0 8px 5px;
+}
+
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+
+legend {
+  margin: 0 0 20px 0;
+  padding: 0;
+  border-bottom: 1px dotted #ccc;
+  font: 18px arial;
+  color: #666;
+}
+
+.actions input {
+  margin-left: 150px;
+}
 
